Implementa ajustes na interface com usuário

--- a/public/deviceDenied.html
+++ b/public/deviceDenied.html
@@ -23,8 +23,7 @@
             align-items: center;
             font-family: "Audiowide", sans-serif;
             color: black;
-            background-image: linear-gradient(440deg, #662d91 0%, #BC70A4 50%, #BFD641 100%);
-            background-size: cover;
+            background-image: linear-gradient(to right, #662d91 0%, #BC70A4 50%, #BFD641 100%);
             padding: auto;
         }
 
@@ -41,7 +40,7 @@
 <body>
     <div id="DeviceDeniedHeader">
         <i class="fa fa-4x fa-microphone-slash"></i>
-        <h2>O nosso robô funcionará melhor utilizando o Microfone e a Câmera.</h2>
+        <h2>O nosso robô funcionará melhor utilizando o Microfone.</h2>
         <h2>Porém parece que nos foi bloqueado o acesso a estes recursos.</h2>
         <h3>Mas se deseja desbloquear, siga o passo a passo descrito abaixo. Depois retorne ao nosso site.</h3>
     </div>
@@ -50,12 +49,8 @@
         <ul id="lista">
             <li>No canto superior direito do navegador, clique Configurações.</li>
             <li>Privacidade e segurança</li>
-            <li>Configurações do site</li>
-            <li></li>
-            <li>Câmera.</li>
-            <li>Excluia o nosso portal da lista de bloqueados.</li>
-            <li></li>
-            <li>Microfone.</li>
+            <li>Configurações do site</li>            
+            <li>Microfone</li>
             <li>Excluia o nosso portal da lista de bloqueados.</li>
         </ul>
     </div>
