--- a/public/deviceError.html
+++ b/public/deviceError.html
@@ -23,8 +23,7 @@
             align-items: center;
             font-family: "Audiowide", sans-serif;
             color: black;
-            background-image: linear-gradient(440deg, #662d91 0%, #BC70A4 50%, #BFD641 100%);
-            background-size: cover;
+            background-image: linear-gradient(to right, #662d91 0%, #BC70A4 50%, #BFD641 100%);
             padding: auto;
         }
 
