--- a/public/deviceNotFound.html
+++ b/public/deviceNotFound.html
@@ -23,8 +23,7 @@
             align-items: center;
             font-family: "Audiowide", sans-serif;
             color: black;
-            background-image: linear-gradient(440deg, #662d91 0%, #BC70A4 50%, #BFD641 100%);
-            background-size: cover;
+            background-image: linear-gradient(to right, #662d91 0%, #BC70A4 50%, #BFD641 100%);
             padding: auto;
         }
 
@@ -39,7 +38,7 @@
 </head>
 
 <body>
-    <h2>Dispositivos (Microfone e a Câmera) não encontrados</h2>    
+    <h2>Dispositivos (Microfone ou Câmera) não encontrados</h2>    
     <a href="index.html"><button type="button">Voltar <i class="fa fa-ban"></i></button> </a>        
 </body>
 
