--- a/public/devicePrompt.html
+++ b/public/devicePrompt.html
@@ -23,8 +23,7 @@
             align-items: center;
             font-family: "Audiowide", sans-serif;
             color: black;
-            background-image: linear-gradient(440deg, #662d91 0%, #BC70A4 50%, #BFD641 100%);
-            background-size: cover;
+            background-image: linear-gradient(to right, #662d91 0%, #BC70A4 50%, #BFD641 100%);
             padding: auto;
         }
 
@@ -37,11 +36,12 @@
     </style>
 
     <script type="text/javascript" src="src/mediaDevices.js"></script>
+    <script type="text/javascript" src="src/display.js"></script>
 
 </head>
 
 <body>
-    <h2>Para o nosso robô funcionar vamos precisar usar o Microfone e a Câmera.</h2>    
+    <h2>Para o nosso robô funcionar vamos precisar usar o Microfone</h2>    
     <h2>Clique no botão "AVANÇAR" e em "PERMITIR" quando for solicitado.</h2><br>
 
     <a href="index.html"><button type="button">Cancelar <i class="fa fa-ban"></i></button> </a>    
@@ -49,19 +49,26 @@
 </body>
 
 <script type="text/javascript" >
+
     // solicita permissão do usuário para uso de microfone
     async function getMicPermission() {
-        let micPermission = await micPrompt();    
-        if (micPermission == 'granted') {
-            window.location.href = "interaction.html"
-        } else if (micPermission == 'denied') {
-            window.location.href = "deviceDenied.html";
-        } else if (micPermission == 'notFound') {
-            window.location.href = "deviceNotFound.html";
-        } else if (micPermission == 'error') {
-            window.location.href = "deviceError.html";
-        }
+        let micPermission = await micPrompt();  
+        switch (micPermission) {
+            case 'granted':
+                goToPage("index.html")       
+                break;
+            case 'denied':
+                goToPage("deviceDenied.html")       
+                break;
+            case 'notFound':
+                goToPage("deviceNotFound.html")       
+                break;
+            case 'error':
+                goToPage("deviceError.html")       
+                break;                
+        }          
     }
+    
 </script>
 
 </html>
